test/fail/static.rs
#[objective::objective]
trait Test {
    fn test() {
    }
}

fn main() {}
